# PurpleSky

./: .gitattributes  .gitignore  AGENTS.md  DATA_SETUP.md  Dockerfile  GEMINI.md  MONUSDT_Trader_MAIN.bat  Manual.md  Manual_ES.md  Manual_live_trader.txt  PROGRAM_OVERVIEW.md  PurpleSky.spec  RAVEUSDT_Trader_MAIN.bat  RAVEUSDT_Trader_Sub1.bat  README.md  README.txt  README_ES.md  VERSION_CONTROL.md  ai-log.txt  backtest.py  backtest_saved_model.py  backtest_tuned_config.py  balance_history.jsonl  best_params.json  bot_state_RAVEUSDT.json  bot_state_RAVEUSDT_v2.json  bot_state_RAVEUSDT_v2_sim.json  build.ps1  bybit_adapter.py  bybit_live_trader.py  bybit_ws_probe.py  check_correlation.py  check_position_id.py  check_robustness.py  check_symbol.py  clean_train.py  closed_pnl_stats.json  code1.py  code2.py  compare_backtests.py  (+73 more)
Bybit_API_specification_docs/: create_order.txt  market_kline.txt  position_info.txt
bybit_docs/: download_failures.txt
docs/: features_documentation.txt
rust_pipeline/: Cargo.toml  pyproject.toml
rust_pipeline/src/: lib.rs  main.rs  pipeline.rs
scripts/: README.md  download_bybit_historical.py  process_bybit_downloads.py  requirements.txt
tests/: test_adversarial_live.py  test_adversarial_trading_logic.py  test_bybit_adapter.py  test_chaos_integrity.py  test_cli_robustness.py  test_comprehensive_features.py  test_csv_integrity.py  test_data_integrity_logic.py  test_fartcoin_production_pipeline.py  test_feature_math.py  test_feature_parity.py  test_integrity_comprehensive.py  test_killer_scenarios.py  test_limit_orders.py  test_sync_poc.py  (+26 more)
(+39 files in other folders)
