[package]
name = "sofia_rust_pipeline"
version = "0.1.0"
edition = "2021"

[lib]
name = "sofia_rust_pipeline"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = "54.0.0"
arrow-ipc = "54.0.0"
arrow-arith = "54.0.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pyo3 = { version = "0.25", features = ["extension-module"] }
